Removed ZGC: Java 11 requires experimental flags